<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1FB">

    <!-- Logo Image -->

    <!-- Logo Text -->

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="164dp"
        android:src="@drawable/logo2" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:letterSpacing="0.05"
        android:text="@string/logo"
        android:textColor="#1E3A5F"
        android:textSize="48sp"
        android:textStyle="bold" />

    <!-- Welcome -->

    <!-- Subtitle -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoText"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:text="@string/Create"
        android:textColor="#1E3A5F"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--Full name-->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-1dp"
        android:text="@string/Create2"
        android:textColor="#8796A6"
        android:textSize="19sp" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/subtitleText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/person" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="Full Name"
            android:inputType="textEmailAddress"
            android:id="@+id/FullName"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="#ADACAC" />
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/nameLayout"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/mail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/EmailAddress"
            android:hint="Email address"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="#ADACAC" />
    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/emailLayout"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="Password"
            android:id="@+id/password"
            android:textColorHint="#ADACAC"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <!-- Login Button -->

    <!-- OR -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/linearLayout"
        android:layout_marginStart="29dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/button"
        android:text="@string/Create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Google Button -->
    <LinearLayout
        android:id="@+id/orLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CreateButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="29dp"
        android:paddingEnd="29dp">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#ADACAC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="or"
            android:textColor="#ADACAC"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#ADACAC" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/orLayout"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/googlebutton"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="Continue with Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Sign Up -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/googleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create3"
            android:textColor="#ADACAC"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Sign in"
            android:textColor="#1E3A5F"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/CreateButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="181dp"
        android:visibility="invisible" />

</RelativeLayout>